//
// KVBlockChain events service:
// Provides a service to stream committed blocks.
//
// NOTE(JM): This service returns "SimpleKVBC" blocks, not the
// concord-bft decision block, which contains multiple
// transactions. In "SimpleKVBC" each block is a single transaction
// containing a set of write operations.
//

syntax = "proto3";
package com.digitalasset.kvbc;
option java_package = "com.digitalasset.kvbc";

service EventsService {
  rpc CommittedTxs (CommittedTxsRequest) returns (stream CommittedTx) {}
}

message CommittedTxsRequest {
}

message CommittedTx {
  // The block to which the transaction was committed.
  int64 block_id = 1;

  // The transaction id, that is, the key at which the transaction is stored.
  bytes transaction_id = 2;

  string correlation_id = 3;
}

